------------------------------------------------------
Version 1.8.9 - 1.3.0
------------------------------------------------------
Additions (in relation to 1.7.10 - 1.2.15)
- None

Changes (in relation to 1.7.10 - 1.2.15)
- Default keybinding to open backpack is 'c' and to equip is now 'v'
- Changed how backpacks are stored internally, both for death and in general (uses two IEEPs)
- Tons of various minor fixes/changes/optimizations

Bug Fixes (in relation to 1.7.10 - 1.2.15)
- None